switch Path.of to Paths.get (#566)
Signed-off-by: Steven Bayer <smbayer@amazon.com>

Co-authored-by: Steven Bayer <smbayer@amazon.com>
Signed-off-by: Arun Lakshmanan <arnlaksh@amazon.com>